# COMP371_all

./: .gitignore
AssignmentTemplates/Assignment1/code/src/: A1solution.cpp  A1solution.h
COMP371_RaytracerBase/code/: CMakeLists.txt
COMP371_RaytracerBase/code/src/: RayTracer.cpp  RayTracer.h  commons.cpp  commons.h  geometry.h  shapes.cpp  shapes.h
